# dendrite

./: README.md
dendrite-rs/: Cargo.toml  README.md  package.xml
dendrite-rs/launch/: dendrite_rs.launch.py
dendrite-rs/src/: main.rs
docs/: Turtlebot4.md
prototype/: pyproject.toml
xrif_node/: CMakeLists.txt  README.md  package.xml
xrif_node/launch/: dendrite_xrif.launch.py
xrif_node/src/: entrypoint.cpp
