<package format="3">
  <name>dendrite-rs</name>
  <version>0.1.0</version>
  <description>Rust-based XRIF decompiling and task execution</description>
  <maintainer email="ammar.siddiqui847@gmail.com">Ammar Siddiqui</maintainer>
  <license>MIT</license>

  <depend>rclrs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
